GNOME Bugzilla – Bug 690316
writer: Fix typo causing segfaults on service shutdown
Last modified: 2012-12-17 21:48:39 UTC
Created attachment 231682 [details] [review] writer: Fix typo causing segfaults on service shutdown Was seeing crashes in the latest gnome-ostree on login. --- service/dconf-writer.c | 2 +- 1 files changed, 1 insertions(+), 1 deletions(-)
Review of attachment 231682 [details] [review]: Looks right to me.
commit 3928089f34a17102b958fe39959215a447192ae0