writer: Fix typo causing segfaults on service shutdown

Was seeing crashes in the latest gnome-ostree on login.

https://bugzilla.gnome.org/show_bug.cgi?id=690316